--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,22 +11,26 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            overflow: auto; /* Добавлена прокрутка */
         }
-        .container {
+
+        .svg-container {
             width: 100%;
-            height: 100%;
-            overflow: auto; /* Прокрутка внутри контейнера */
+            height: 100vh; /* Высота окна */
+            overflow: auto; /* Включает прокрутку, если изображение больше окна */
         }
-        .container svg {
-            display: block;
+
+        .svg-container svg {
+            width: 100%;
+            height: auto; /* Сохраняет пропорции SVG */
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <embed src="BPMN.svg" type="image/svg+xml" style="width:100%; height:auto;">
+    <div class="svg-container">
+        <!-- Вставьте ваше SVG изображение здесь -->
+        <object type="image/svg+xml" data="BPMN.svg" style="width: 100%; height: auto;">
+            Ваш браузер не поддерживает SVG.
+        </object>
     </div>
 </body>
 </html>
