--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <style>
         body {
+            background:pink;
             margin: 0;
             padding: 0;
             overflow: auto;
