--- a/index.html
+++ b/index.html
@@ -1,48 +1,33 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BPMN Model</title>
     <style>
         body {
-            background:pink;
             margin: 0;
             padding: 0;
-            overflow: auto;
-        }
-        svg {
-            display: block;
-            width: 100%;
-            height: auto;
-            transition: transform 0.2s ease-in-out;
-        }
-        .zoom-container {
-            overflow: auto;
-            width: 100%;
-            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
+            height: 100vh;
+            overflow: auto; /* Добавлена прокрутка */
+        }
+        .container {
+            width: 100%;
+            height: 100%;
+            overflow: auto; /* Прокрутка внутри контейнера */
+        }
+        .container svg {
+            display: block;
         }
     </style>
 </head>
 <body>
-    <div class="zoom-container">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200">
-            <circle cx="100" cy="100" r="50" stroke="black" stroke-width="3" fill="red"/>
-        </svg>
+    <div class="container">
+        <embed src="BPMN.svg" type="image/svg+xml" style="width:100%; height:auto;">
     </div>
-
-    <script>
-        const svgElement = document.querySelector('svg');
-        let scale = 1;
-
-        document.body.addEventListener('wheel', (event) => {
-            if (event.deltaY < 0) {
-                scale += 0.1; // увеличиваем масштаб
-            } else {
-                scale -= 0.1; // уменьшаем масштаб
-            }
-            svgElement.style.transform = `scale(${scale})`;
-            event.preventDefault();
-        });
-    </script>
 </body>
 </html>
+
