--- a/index.html
+++ b/index.html
@@ -4,30 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BPMN Model</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            overflow: auto; /* Добавлена прокрутка */
-        }
-        .container {
-            width: 100%;
-            height: 100%;
-            overflow: auto; /* Прокрутка внутри контейнера */
-        }
-        .container svg {
-            display: block;
-        }
-    </style>
 </head>
 <body>
-    <div class="container">
-        <embed src="BPMN.svg" type="image/svg+xml" style="width:100%; height:auto;">
-    </div>
+    <h1>BPMN Model</h1>
+    <!-- Встраиваем SVG файл -->
+    <embed src="BPMN.svg" type="image/svg+xml" style="width:100%; height:100vh; border: 1px solid #ccc;">
 </body>
 </html>
 
